EDM-1951: Send events instead of tasks
