# api/v1alpha1/openapi.yaml
@@ -5541,11 +5541,14 @@ components:
             - DeviceSpecValid
             - DeviceSpecInvalid
             - InternalTaskFailed
+            - ReferencedRepositoryUpdated
             - RepositoryAccessible
             - RepositoryInaccessible
             - FleetRolloutStarted
             - FleetRolloutCreated
+            - FleetRolloutBatchDispatched
             - FleetRolloutBatchCompleted
+            - FleetRolloutDeviceSelected
             - ResourceSyncCommitDetected
             - ResourceSyncAccessible
             - ResourceSyncInaccessible
@@ -5628,14 +5631,20 @@ components:
           InternalTaskFailed: "#/components/schemas/InternalTaskFailedDetails"
           ResourceSyncCompleted: "#/components/schemas/ResourceSyncCompletedDetails"
           FleetRolloutStarted: "#/components/schemas/FleetRolloutStartedDetails"
+          FleetRolloutBatchDispatched: "#/components/schemas/FleetRolloutBatchDispatchedDetails"
+          FleetRolloutDeviceSelected: "#/components/schemas/FleetRolloutDeviceSelectedDetails"
+          ReferencedRepositoryUpdated: "#/components/schemas/ReferencedRepositoryUpdatedDetails"
       oneOf:
         - $ref: "#/components/schemas/ResourceUpdatedDetails"
         - $ref: "#/components/schemas/DeviceOwnershipChangedDetails"
         - $ref: "#/components/schemas/DeviceMultipleOwnersDetectedDetails"
         - $ref: "#/components/schemas/DeviceMultipleOwnersResolvedDetails"
         - $ref: "#/components/schemas/InternalTaskFailedDetails"
+        - $ref: "#/components/schemas/FleetRolloutBatchDispatchedDetails"
+        - $ref: "#/components/schemas/FleetRolloutDeviceSelectedDetails"
         - $ref: "#/components/schemas/ResourceSyncCompletedDetails"
         - $ref: "#/components/schemas/FleetRolloutStartedDetails"
+        - $ref: "#/components/schemas/ReferencedRepositoryUpdatedDetails"
     ResourceUpdatedDetails:
       type: object
       required:
@@ -5650,7 +5659,7 @@ components:
           type: array
           items:
             type: string
-            enum: [owner, labels, spec]
+            enum: [owner, labels, spec, spec.selector, spec.template]
           description: List of fields that were updated in the resource.
         previousOwner:
           type: string
@@ -5735,11 +5744,9 @@ components:
         retryCount:
           type: integer
           description: Number of times the task has been retried.
-        taskParameters:
-          type: object
-          additionalProperties:
-            type: string
-          description: Parameters needed to retry the task.
+        originalEventJson:
+          type: string
+          description: The original event that triggered the internal task, serialized as JSON.
     ResourceSyncCompletedDetails:
       type: object
       required:
@@ -5766,7 +5773,7 @@ components:
       required:
         - detailType
         - templateVersion
-        - isImmediate
+        - rolloutStrategy
       properties:
         detailType:
           type: string
@@ -5775,10 +5782,57 @@ components:
         templateVersion:
           type: string
           description: The name of the TemplateVersion that is rolling out.
-        isImmediate:
+        rolloutStrategy:
           type: string
           enum: [batched, immediate]
           description: Rollout strategy type.
+    FleetRolloutDeviceSelectedDetails:
+      type: object
+      required:
+        - detailType
+        - fleetName
+        - templateVersion
+      properties:
+        detailType:
+          type: string
+          enum: [FleetRolloutDeviceSelected]
+          description: The type of detail for discriminator purposes.
+        fleetName:
+          type: string
+          description: The name of the fleet that the device is being selected for.
+        templateVersion:
+          type: string
+          description: The name of the TemplateVersion that the device is being selected to render.
+    FleetRolloutBatchDispatchedDetails:
+      type: object
+      required:
+        - detailType
+        - templateVersion
+        - batchNumber
+      properties:
+        detailType:
+          type: string
+          enum: [FleetRolloutBatchDispatched]
+          description: The type of detail for discriminator purposes.
+        templateVersion:
+          type: string
+          description: The name of the TemplateVersion that this batch is rolling out to.
+        batchNumber:
+          type: string
+          description: Number of this batch within the fleet rollout.
+    ReferencedRepositoryUpdatedDetails:
+      type: object
+      required:
+        - detailType
+        - repositoryName
+      properties:
+        detailType:
+          type: string
+          enum: [ReferencedRepositoryUpdated]
+          description: The type of detail for discriminator purposes.
+        repositoryName:
+          type: string
+          description: The name of the repository that was updated.
     Organization:
       type: object
       required:
